kubernates.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: client
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client-container
          image: gcr.io/ay2324s1-cs3219-g43/client
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service-container
          image: ay2324s1-course-assessment-g43-user-service
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-service
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: question-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: question-service
  template:
    metadata:
      labels:
        app: question-service
    spec:
      containers:
        - name: question-service-container
          image: ay2324s1-course-assessment-g43-question-service
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: question-service-service
spec:
  selector:
    app: question-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matching-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: matching-service
  template:
    metadata:
      labels:
        app: matching-service
    spec:
      containers:
        - name: matching-service-container
          image: ay2324s1-course-assessment-g43-matching-service
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: matching-service-service
spec:
  selector:
    app: matching-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
