my-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: "nginx"
  rules:
    - host:
      http:
        paths:
          - path: /user-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8000
          - path: /question-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: question-service
                port:
                  number: 3000
          - path: /history-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: history-service
                port:
                  number: 3001
          - path: /code-execution-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: code-execution-service
                port:
                  number: 5001
